iron_gallery_braavos/02-iron-gallery.yaml
# k create deploy iron-gallery --image kodekloud/irongallery:2.0 --dry-run=client -oyaml > 03-iron-gallery.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      run: iron-gallery
  template:
    metadata:
      labels:
        run: iron-gallery
    spec:
      volumes:                                        # add this
      - name: config
        emptyDir: {}
      - name: images
        emptyDir: {}
      containers:
      - name: iron-gallery
        image: 'kodekloud/irongallery:2.0'
        volumeMounts:                                 # add this
        - name: config
          mountPath: '/usr/share/nginx/html/data'
        - name: images
          mountPath: '/usr/share/nginx/html/uploads'
        resources:                                    # add this
          limits:
            memory: "100Mi"
            cpu: "50m"
